--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -39,7 +39,10 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
-
+                      <li class="filter list-group-item">
+                        <label for="city">Enter the city</label>
+                        <input class="form-control" id="city" type="text">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
