--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -43,6 +43,18 @@
                         <label for="city">Enter the city</label>
                         <input class="form-control" id="city" type="text">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter the state</label>
+                        <input class="form-control" id="state" type="text">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter the country</label>
+                        <input class="form-control" id="country" type="text">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter the shape</label>
+                        <input class="form-control" id="shape" type="text">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
